Updated the font sizing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
         <div class="main_body">
-            <h1 class="c">
+            <h1 class="cc">
                 Innovative IT Solutions <br>
                 Unleashing Your Digital Potential.
             </h1>
