Create the basic version for the oasis infobyte landing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="navgation_bar">
             <div class="company_logo">
-                <img src="Company_logo.png" alt="">
+                <img src="Company_logo.png" onclick="opesn()">
                 <div class="company_name"> 
                     OASIS <br> INFOBYTE
                 </div>
